# infrastructure-intro-dist

./: CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-package.yml
autograder/: Dockerfile
autograder/source/: run_autograder  run_tests.py
infrastructure_intro/: assignment.py  infrastructure_intro_assignment.ipynb  test_assignment.py
